--- a/Estilos-gerais/home.css
+++ b/Estilos-gerais/home.css
@@ -21,8 +21,10 @@ main{
 	margin-bottom: 1em;
 }
 
-li{
+.espacoConvenio li{
+	width: 33%;
 	display: inline-block;
+	float: left;
 }
 
 .conveniosLista{
@@ -30,7 +32,7 @@ li{
 	font-weight: bold;
 	border-style: none;
 	border-radius: 10px;
-	width: 20%;
+	width: 70%;
 	background: #CAF0F8;
 	color: #86929A;
 	margin: 1em 2em;
