--- a/Estilos-gerais/home.css
+++ b/Estilos-gerais/home.css
@@ -16,15 +16,14 @@ main{
 	color: #5CC6D0;
 }
 
-.espacoConvenio{
+.areaDosConvenios{
 	width: 100%;
 	margin-bottom: 1em;
 }
 
-.espacoConvenio li{
+.navegacaoConvenios li{
 	width: 33%;
 	display: inline-block;
-	float: left;
 }
 
 .conveniosLista{
@@ -37,7 +36,13 @@ main{
 	color: #86929A;
 	margin: 1em 2em;
 	padding: 1em 2em;
-	transition: 0.5s all;
+	transition: 0.2s all;
+}
+
+.conveniosLista:hover{
+	color: #FEFEFE;
+	background: #5CC6D0;
+	transform: scale(1.2);
 }
 
 
