ajustando o tamanho da fonte do texto da descrição

--- a/Estilos-gerais/home.css
+++ b/Estilos-gerais/home.css
@@ -22,6 +22,10 @@ main{
 	display: inline-block;
 }
 
+.descricaoTexto{
+	font-size: 1.2em;
+}
+
 .conveniosTitulo{
 	margin: 1em 0;
 	font-size: 22px;
